force-app/main/default/objects/Asset__c/fields/Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>