force-app/main/default/objects/Asset__c/fields/Total_Application__c.field-meta.xml
<CustomField>
    <fullName>Total_Application__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>